--- a/src/App.css
+++ b/src/App.css
@@ -20,22 +20,25 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 .card-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin: 1rem 0.8rem;
-  width: 250px;
-  height: 350px;
+  margin: 0.5rem 0.5rem;
+  width: 20vw;
+  min-width: 100px;
+  max-width: 250px;
+  height: auto;
   background-color: rgb(119, 179, 252);
   border-radius: 1rem;
   padding: 0.3rem 0.3rem 2rem 0.3rem;
 }
 .card-wrapper:hover{
   box-shadow: 0 0 10px 10px rgb(8, 193, 244);
+  cursor: pointer;
 }
 
 .card-wrapper > img {
